versionCode=693  versionName=9.12.1.0