@@ -1,155 +1,66 @@
-import java.util.ArrayList;
+import android.content.Context;
+import android.content.SharedPreferences;
+import android.content.SharedPreferences.Editor;
+import android.os.Build.VERSION;
 
 public final class bxj
 {
-  public static String a(String paramString, char paramChar)
-  {
-    paramString = paramString.trim();
-    if (paramString.charAt(0) == paramChar)
-    {
-      paramString = paramString.substring(1, paramString.length());
-      if (paramString.charAt(paramString.length() - 1) == paramChar) {
-        return paramString.substring(0, paramString.length() - 1);
-      }
-    }
-    else
-    {
-      throw new bxh("Value does not start with a quote.");
-    }
-    throw new bxh("Value does not end with a quote.");
-  }
+  public SharedPreferences a;
+  public SharedPreferences.Editor b;
+  private SharedPreferences c;
+  private SharedPreferences.Editor d;
   
-  public static ArrayList a(String paramString)
+  private static Boolean a()
   {
-    localArrayList = new ArrayList();
     try
     {
-      paramString = new bwv(paramString);
-      while (paramString.a()) {
-        localArrayList.add(new Double(paramString.b().trim()));
+      if (Build.VERSION.SDK_INT >= 9) {}
+      for (boolean bool = true;; bool = false) {
+        return Boolean.valueOf(bool);
       }
-      return localArrayList;
+      return Boolean.valueOf(false);
     }
-    catch (Exception paramString)
+    catch (NoClassDefFoundError localNoClassDefFoundError) {}
+  }
+  
+  public static void a(SharedPreferences.Editor paramEditor)
+  {
+    if (a().booleanValue())
     {
-      throw new bxh("Invalid values in string.", paramString);
+      paramEditor.apply();
+      return;
+    }
+    paramEditor.commit();
+  }
+  
+  public final String a(Context paramContext)
+  {
+    if (paramContext == null) {}
+    do
+    {
+      return null;
+      c = paramContext.getSharedPreferences("net.hockeyapp.android.prefs_feedback_token", 0);
+    } while (c == null);
+    return c.getString("net.hockeyapp.android.prefs_key_feedback_token", null);
+  }
+  
+  public final void a(Context paramContext, String paramString)
+  {
+    if (paramContext != null)
+    {
+      c = paramContext.getSharedPreferences("net.hockeyapp.android.prefs_feedback_token", 0);
+      if (c != null)
+      {
+        d = c.edit();
+        d.putString("net.hockeyapp.android.prefs_key_feedback_token", paramString);
+        a(d);
+      }
     }
   }
   
-  public static ArrayList b(String paramString)
+  public static final class a
   {
-    localArrayList = new ArrayList();
-    try
-    {
-      paramString = new bwv(paramString);
-      while (paramString.a()) {
-        localArrayList.add(paramString.b());
-      }
-      return localArrayList;
-    }
-    catch (Exception paramString)
-    {
-      throw new bxh("Invalid values in string.", paramString);
-    }
-  }
-  
-  public static ArrayList c(String paramString)
-  {
-    ArrayList localArrayList = new ArrayList();
-    for (;;)
-    {
-      int i;
-      try
-      {
-        paramString = new bwv(paramString);
-        i = 0;
-        if (!paramString.a()) {
-          break label101;
-        }
-        if (i == 0) {
-          localArrayList.add(paramString.b());
-        } else if (i == 1) {
-          localArrayList.add(new Integer(new Double(paramString.b().trim()).intValue()));
-        }
-      }
-      catch (Exception paramString)
-      {
-        throw new bxh("Invalid values in string.", paramString);
-      }
-      throw new bxh("Invalid values in string.");
-      label101:
-      return localArrayList;
-      i += 1;
-    }
-  }
-  
-  public static ArrayList d(String paramString)
-  {
-    ArrayList localArrayList = new ArrayList();
-    for (;;)
-    {
-      int i;
-      try
-      {
-        paramString = new bwv(paramString);
-        i = 0;
-        if (!paramString.a()) {
-          break label106;
-        }
-        if ((i == 0) || (i == 1)) {
-          localArrayList.add(paramString.b());
-        } else if (i == 2) {
-          localArrayList.add(new Integer(new Double(paramString.b().trim()).intValue()));
-        }
-      }
-      catch (Exception paramString)
-      {
-        throw new bxh("Invalid values in string.", paramString);
-      }
-      throw new bxh("Invalid values in string.");
-      label106:
-      return localArrayList;
-      i += 1;
-    }
-  }
-  
-  public static ArrayList e(String paramString)
-  {
-    ArrayList localArrayList = new ArrayList();
-    for (;;)
-    {
-      int i;
-      try
-      {
-        paramString = new bwv(paramString);
-        i = 0;
-        if (!paramString.a()) {
-          break label99;
-        }
-        if (i != 0) {
-          break label108;
-        }
-        localArrayList.add(paramString.b().trim());
-      }
-      catch (Exception paramString)
-      {
-        label45:
-        throw new bxh("Invalid values in string.", paramString);
-      }
-      localArrayList.add(new Integer(new Double(paramString.b().trim()).intValue()));
-      label99:
-      label108:
-      do
-      {
-        throw new bxh("Invalid values in string.");
-        return localArrayList;
-        i += 1;
-        break;
-        if (i == 1) {
-          break label45;
-        }
-      } while (i != 2);
-    }
+    public static final bxj a = new bxj((byte)0);
   }
 }
 
